--- a/.aws-sam/build.toml
+++ b/.aws-sam/build.toml
@@ -6,6 +6,6 @@ codeuri = "."
 runtime = "nodejs12.x"
 source_md5 = ""
 packagetype = "Zip"
-functions = ["PackingCompletedHandler", "DeliveryNoteCancelledHandler", "InitializeFunction"]
+functions = ["PackingCompletedHandler", "BookingHandler", "DeliveryNoteCancelledHandler", "BookingCancelledHandler", "InitializeFunction"]
 
 [layer_build_definitions]
